Upgrade to Java 15 (#18)
* Use Java 15

* Converted endpoint models to records

* Converted client models to records

* Converted app properties models to records

* Upgraded Jacoco (fails unit tests)

* Upgraded Jackson libraries (problems with Java 15)

* Upgraded scripts